--- a/podfile
+++ b/podfile
@@ -5,5 +5,5 @@ target 'Translate2Learn' do
 #use_frameworks!
 
     pod 'AFNetworking', '~> 3.0'
-    pod 'MBProgressHUD'
+    pod 'MBProgressHUD', '~> 1.0.0'
 end
